--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,19 +32,18 @@ jobs:
           gcloud components install gke-gcloud-auth-plugin --quiet
           export USE_GKE_GCLOUD_AUTH_PLUGIN=True
 
-      - name: 🔑 Get GKE Credentials
+      - name: Get GKE Credentials
         run: |
           gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} \
             --zone ${{ secrets.GKE_ZONE }} \
             --project ${{ secrets.GCP_PROJECT_ID }}
 
-      # Step: Set up Python and install dependencies
-      - name: 🐍 Set up Python and install dependencies
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      - name: 📦 Install Python dependencies
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
@@ -67,8 +66,6 @@ jobs:
 
       - name: Deploy to GKE
         run: |
-          gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} \
-            --zone ${{ secrets.GKE_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}
           kubectl set image deployment/iris-api iris-api=$GAR_LOCATION:${{ github.sha }} --namespace=default
           kubectl rollout status deployment/iris-api --namespace=default
 
@@ -96,8 +93,11 @@ jobs:
           EOF
           kubectl apply -f hpa.yaml
 
-      - name: Wait for external IP
+      - name: Install wrk & run stress tests
         run: |
+          sudo apt-get update -y && sudo apt-get install -y wrk
+
+          # Wait for service to get external IP
           for i in {1..30}; do
             EXTERNAL_IP=$(kubectl get svc iris-api -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
             if [ -n "$EXTERNAL_IP" ]; then
@@ -111,26 +111,26 @@ jobs:
             echo "ERROR: Service did not get an external IP"
             exit 1
           fi
-          echo "🌐 Testing endpoint: http://$EXTERNAL_IP/predict"
-          wrk -t8 -c1500 -d60s -s post.lua http://$EXTERNAL_IP/predict
 
-      - name: Install wrk & run stress test
-        run: |
-          sudo apt-get update -y && sudo apt-get install -y wrk
-          EXTERNAL_IP=$(kubectl get svc iris-api -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+          echo "🌐 Endpoint: http://$EXTERNAL_IP/predict"
+
+          # Create Lua POST script
           cat <<'EOF' > post.lua
           wrk.method = "POST"
           wrk.body = '{"features": [5.1, 3.5, 1.4, 0.2]}'
           wrk.headers["Content-Type"] = "application/json"
           EOF
+
+          # Run wrk stress tests
+          echo "Running stress test: 1000 connections"
           wrk -t8 -c1000 -d30s -s post.lua http://$EXTERNAL_IP/predict
 
-      - name: Observe scaling & bottleneck
-        run: |
+          echo "Running stress test: 1500 connections (observe scaling)"
           wrk -t8 -c1500 -d60s -s post.lua http://$EXTERNAL_IP/predict
-          kubectl get hpa
-          kubectl get pods -o wide
+
+          echo "Running stress test: 2000 connections (1 pod bottleneck)"
           kubectl delete hpa iris-api-hpa || true
           kubectl scale deployment iris-api --replicas=1
           wrk -t8 -c2000 -d45s -s post.lua http://$EXTERNAL_IP/predict
-          kubectl top pods || echo "Metrics server may not be installed"
+
+          kubectl top pods || echo "⚠️ Metrics server may not be installed"
